--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-Talus_TPL/*.php ident
-Talus_TPL/Interfaces/*.php ident
-Talus_TPL/Exceptions/*.php ident
+lib/Talus_TPL/*.php ident
+lib/Talus_TPL/Interfaces/*.php ident
+lib/Talus_TPL/Exceptions/*.php ident
