reducing the gitattributes file, adding the diff on php files

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,4 @@
 CHANGELOG_TPL ident
 
 #every php files
-lib/Talus_TPL/*.php ident
-lib/Talus_TPL/Exceptions/*.php ident
-lib/Talus_TPL/Interfaces/*.php ident
+*.php ident diff=php
