--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
   "name": "Taluu/Link-TPL",
   "type": "Library",
-  "description": "Template Engine for PHP 5.2",
-  "keywords": ["template", "cache", "tpl", "link", "view"],
+  "description": "Templating Engine for PHP",
+  "keywords": ["templating"],
+  "version": "1.13.0"
   "homepage": "http://github.com/Taluu/Link-TPL",
-  "license": "Modified BSD",
+  "license": "BSD",
   
   "authors": [
       {
@@ -20,7 +21,7 @@
 
   "autoload": {
       "psr-0": {
-          "Link": "lib"
+          "Link_": "lib/"
         }
     }
 }
