updating license in the composer

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["templating"],
   "version": "1.13.0",
   "homepage": "http://github.com/Taluu/Link-TPL",
-  "license": "BSD",
+  "license": "BSD-3",
   
   "authors": [
       {
