--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "Library",
   "description": "Templating Engine for PHP",
   "keywords": ["templating"],
-  "version": "1.13.0",
+  "version": "1.13.0-dev",
   "homepage": "http://github.com/Taluu/Link-TPL",
   "license": "BSD-3",
   
