Test on travis platform for sha1 result

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ php:
   - 5.2
   - 5.3
   - 5.4
+
+# this is a test for travis
+before_script:
+  - php -r "echo sha1('test');"
+  - echo "\n should be : a94a8fe5ccb19ba61c4c0873d391e987982fbbd3\n"
