--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ php:
   - 5.4
 
 # this is a test for travis
-before_script:
-  - php -r "echo 'Actual :: ' . sha1('test') . \"\nExpected :: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3\n\";"
+before_script: php -r "echo 'Actual :: ' . sha1('test') . \"\nExpected :: a94a8fe5ccb19ba61c4c0873d391e987982fbbd3\n\";"
