--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,8 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="test/bootstrap.php">
+         bootstrap="test/bootstrap.php"
+         verbose="true">
   <testsuites>
     <testsuite name="Link Test Suite">
       <directory>./test/Link/</directory>
