--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
   "keywords": ["templating"],
   "homepage": "http://github.com/Taluu/Link-TPL",
   "license": "BSD-3",
-  "version": "1.13-dev",
+  "version": "1.13.0",
 
   "authors": [
       {
         "name": "Baptiste Clavié",
         "email": "clavie.b@gmail.com",
-        "homepage": "http://baptiste.clavié.net"
+        "homepage": "http://baptiste.clavié.net",
+        "role": "Lead Developper"
       }
     ],
 
@@ -27,8 +28,7 @@
      
     "extra": {
       "branch-alias": {
-        "dev-master": "1.13-dev"
+        "dev-master": "1-dev"
        }
      }
-    }
 }
