--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["templating"],
   "homepage": "http://github.com/Taluu/Link-TPL",
   "license": "BSD-3",
-  "version": "1.13-dev",
+  "version": "1.13.0",
 
   "authors": [
       {
@@ -27,8 +27,7 @@
      
     "extra": {
       "branch-alias": {
-        "dev-master": "1.13-dev"
+        "dev-master": "1-dev"
        }
      }
-    }
 }
