Remove accents in composer.json :(

--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
 
     "authors": [
         {
-            "name": "Baptiste Clavié",
+            "name": "Baptiste Clavie",
             "email": "clavie.b@gmail.com",
-            "homepage": "http://baptiste.clavié.net",
+            "homepage": "http://baptiste.xn--clavi-fsa.net",
             "role": "Lead Developper"
         }
     ],
