--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: php
 
 php:
-  - 5.2
-  - 5.3
-  - 5.4
+    - 5.2
+    - 5.3
+    - 5.4
+
+script:
+    - phpunit --coverage-clover "clover"
+
+after_success:
+    - curl -sL https://bit.ly/artifact-uploader | php
