--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 .ignore
-nbproject
+
 composer.phar
-vendor
+composer.lock
+
 docs/.build
 docs/.templates
 docs/.static
 docs/make.bat
+
+nbproject
 .idea
+
+vendor
 web
