--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,10 @@
         "php": ">=5.2.1"
     },
 
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
+
     "autoload": {
         "psr-0": {
             "Link_": "lib/"
