--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~3.7"
     },
 
     "autoload": {
