--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,15 @@ php:
     - 5.4
     - 5.5
 
+before_script:
+    # if php 5.2, let's use pear
+    - if [ $(php -r 'echo PHP_VERSION_ID;') -lt 50300 ]; then pear channel-discover pear.bovigo.org; fi
+    - if [ $(php -r 'echo PHP_VERSION_ID;') -lt 50300 ]; then pear install bovigo/vfsStream-beta; fi
+    - if [ $(php -r 'echo PHP_VERSION_ID;') -lt 50300 ]; then phpenv rehash; fi
+
+    # else, let's use composer !
+    - if [ $(php -r 'echo PHP_VERSION_ID;') -ge 50300 ]; then curl -s http://getcomposer.org/installer | php; fi
+    - if [ $(php -r 'echo PHP_VERSION_ID;') -ge 50300 ]; then php composer.phar install --dev | php; fi
+
 script:
     - phpunit
