--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,21 @@
         "forum": "http://www.talus-works.net"
     },
 
+    "repositories": [
+        {
+            "type": "pear",
+            "url": "http://pear.bovigo.org",
+            "vendor-alias": "bovigo"
+        }
+    ],
+
     "require": {
-        "php": ">=5.2.1"
+        "php": ">=5.2.3"
     },
 
     "require-dev": {
-        "phpunit/phpunit": "~3.7"
+        "phpunit/phpunit": "~3.7.0",
+        "pear-bovigo/vfsStream": "~0.12.0"
     },
 
     "autoload": {
@@ -38,7 +47,7 @@
 
     "extra": {
         "branch-alias": {
-            "dev-master": "1.14-dev"
+            "dev-master": "1.15-dev"
         }
     }
 }
